@@ -679,47 +679,29 @@ name|out
 operator|.
 name|print
 argument_list|(
-literal|"<dependency "
+literal|"<dependency"
 argument_list|)
 expr_stmt|;
 name|String
 name|org
 init|=
-name|_organisation
-decl_stmt|;
-if|if
-condition|(
 name|attributes
 operator|.
 name|getValue
 argument_list|(
 literal|"org"
 argument_list|)
-operator|!=
-literal|null
-condition|)
-block|{
+decl_stmt|;
 name|org
 operator|=
-name|attributes
-operator|.
-name|getValue
-argument_list|(
-literal|"org"
-argument_list|)
-expr_stmt|;
-name|out
-operator|.
-name|print
-argument_list|(
-literal|"org=\""
-operator|+
 name|org
-operator|+
-literal|"\" "
-argument_list|)
+operator|==
+literal|null
+condition|?
+name|_organisation
+else|:
+name|org
 expr_stmt|;
-block|}
 name|ModuleId
 name|mid
 init|=
@@ -736,20 +718,44 @@ literal|"name"
 argument_list|)
 argument_list|)
 decl_stmt|;
-name|out
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|attributes
 operator|.
-name|print
-argument_list|(
-literal|"name=\""
-operator|+
-name|mid
-operator|.
-name|getName
+name|getLength
 argument_list|()
-operator|+
-literal|"\" "
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|String
+name|attName
+init|=
+name|attributes
+operator|.
+name|getQName
+argument_list|(
+name|i
 argument_list|)
-expr_stmt|;
+decl_stmt|;
+if|if
+condition|(
+literal|"rev"
+operator|.
+name|equals
+argument_list|(
+name|attName
+argument_list|)
+condition|)
+block|{
 name|String
 name|rev
 init|=
@@ -774,7 +780,7 @@ name|out
 operator|.
 name|print
 argument_list|(
-literal|"rev=\""
+literal|" rev=\""
 operator|+
 name|rev
 operator|+
@@ -788,7 +794,7 @@ name|out
 operator|.
 name|print
 argument_list|(
-literal|"rev=\""
+literal|" rev=\""
 operator|+
 name|attributes
 operator|.
@@ -801,34 +807,30 @@ literal|"\""
 argument_list|)
 expr_stmt|;
 block|}
-if|if
-condition|(
-name|attributes
-operator|.
-name|getValue
-argument_list|(
-literal|"conf"
-argument_list|)
-operator|!=
-literal|null
-condition|)
+block|}
+else|else
 block|{
 name|out
 operator|.
 name|print
 argument_list|(
-literal|" conf=\""
+literal|" "
+operator|+
+name|attName
+operator|+
+literal|"=\""
 operator|+
 name|attributes
 operator|.
 name|getValue
 argument_list|(
-literal|"conf"
+name|attName
 argument_list|)
 operator|+
 literal|"\""
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 else|else
