@@ -956,7 +956,7 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
-literal|12
+literal|13
 argument_list|,
 name|dependencies
 operator|.
@@ -1115,6 +1115,53 @@ name|String
 index|[
 literal|0
 index|]
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|dd
+operator|.
+name|isChanging
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|dd
+operator|.
+name|isTransitive
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// changing = true
+name|dd
+operator|=
+name|getDependency
+argument_list|(
+name|dependencies
+argument_list|,
+literal|"mymodule3"
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|dd
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|dd
+operator|.
+name|isChanging
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|dd
+operator|.
+name|isTransitive
+argument_list|()
 argument_list|)
 expr_stmt|;
 comment|// conf="myconf1" => equivalent to myconf1->myconf1
